# serial_monitor

./: .gitignore  CMakeLists.txt  README.md  app.manifest  requirements.txt  resource.h  resources.rc  serial_monitor.cpp
